# lcd

./: .clang-format  .gitignore  .runsettings  CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  impovement-request.md
.github/workflows/: build.yml
cmake/: BoostTestHelpers.cmake
docs/: developer.md  intro.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  res.qrc  stdafx.h
src/lcd_gui_qt/: CMakeLists.txt  app_main_window.cpp  app_main_window.h  display_content.cpp  display_content.h  display_settings.h  i_lcd_drawer.h  lcd_background_drawer.cpp  lcd_background_drawer.h  lcd_content_drawer.cpp  lcd_content_drawer.h  lcd_draw_properties.h  lcd_gui_qt_prototypes.h  lcd_widget.cpp  lcd_widget.h  mainscreen.cpp  mainscreen.h  pcb_graphics_settings.h  pin_tooltip.cpp  pin_tooltip.h  pin_widget.cpp  pin_widget.h  port_widget.cpp  port_widget.h  qt_display.cpp  qt_display.h  qt_timer.cpp  qt_timer.h  stdafx.h
src/lcd_gui_qt/decorations/: screen_border.cpp  screen_border.h
src/lcd_gui_qt/logging/: log_history.cpp  log_history.h  log_history_model.cpp  log_history_model.h  log_widget.cpp  log_widget.h
src/lcd_logic/: CMakeLists.txt  data_bulk.h  display.cpp  display.h  event.h  event_connection.h  i_character_data.h  i_symbol_getter.h  i_timer.h  lcd_assert.h  lcd_controller.cpp  lcd_controller.h  lcd_logic_prototypes.h  pin.cpp  pin.h  port.h  realtime_timer.cpp  realtime_timer.h  scheduler.cpp  scheduler.h  std_timer.cpp  std_timer.h  stdafx.h  step_timer.cpp  step_timer.h  test.cpp  timer_helper_functions.h  uuid.h
src/lcd_logic/logging/: logger_with_timing.cpp  logger_with_timing.h
src/logging/: CMakeLists.txt  i_log_history.h  i_log_sink.h  log_helper.h  log_history.cpp  log_history.h  log_history_sink.cpp  log_history_sink.h  logger.cpp  logger.h  logging_prototypes.h  std_log_history_sink.cpp  stdafx.h
src/logging/adapter/spdlog/: spdlog_helper.cpp  spdlog_helper.h  spdlog_history_sink.cpp  spdlog_history_sink.h  spdlog_history_sink_factory.cpp  spdlog_logger.cpp
src/logging/factory/: log_history_sink_factory.h
src/test/: CMakeLists.txt  test_display.cpp
test/: CMakeLists.txt  lcd_logic_test.cpp  lcd_logic_test_suite.cpp
